# Programming-Labs

./: README.md
2semester/laba2/: 1  main.c
2semester/laba3/ITska-web/: README.md  base.py  sort.c
2semester/laba4/: 1  example.txt  main.c
2semester/laba5/: 1  main.c  trains.txt
2semester/laba6/: CMakeLists.txt  bubblesort.c  dynamic_exe  main.c  quicksort.c  sort.h  static_exe
2semester/laba7/: 1  2  main.c  sleepsort.c  отчет.md
2semester/laba8/: main.go
2semester/rgr/: 1  main.c
